Added the Imbalance Calculator class and a test for it. Added the ImbalanceInfo class. All program components are initialized in the main method